--- a/Content/css/main.css
+++ b/Content/css/main.css
@@ -97,14 +97,13 @@ img.charaImage {
 }
 
 .armorSlot{
-    border:dotted;
-    border-color:blueviolet;
-    width:80px;
-    height:80px;
-    position:absolute;
+    width:100%;
+    height:100%;
+    position:fixed;
     background-position:center;
     background-repeat:no-repeat;
-    background-size:78px 78px;
+    background-size:100% 100%;
+    background-color: whitesmoke;
 }
 
 .svgContainer,svg{
