--- a/Content/css/main.css
+++ b/Content/css/main.css
@@ -103,7 +103,8 @@ img.charaImage {
     background-position:center;
     background-repeat:no-repeat;
     background-size:100% 100%;
-    background-color: whitesmoke;
+    background-color: lightgrey;
+    border-radius:8px;
 }
 
 .svgContainer,svg{
